--- a/src/main/resources/application-client.properties
+++ b/src/main/resources/application-client.properties
@@ -14,3 +14,7 @@ server.port=8081
 
 node.address=http://localhost:8080
 node.name=Simple Client
+messaging_broker.address=127.0.0.1
+messaging_broker.port=5672
+
+node.key_location=./key-client
