--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,7 @@ server.port=8080
 
 node.address=http://localhost:8080
 node.name=Simple Server
+messaging_broker.address=127.0.0.1
+messaging_broker.port=5672
+
+node.key_location=./key-server
